# LijnDing

./: .gitignore  LICENSE  README.md  debug_dill.py  debug_mp.py  lijnding.py  pyproject.toml
components/http/: README.md  pyproject.toml
components/http/src/lijnding/components/: http.py
components/http/tests/: test_http.py
components/rabbitmq/: README.md  pyproject.toml
components/rabbitmq/src/lijnding/components/: rabbitmq.py
components/rabbitmq/tests/: test_rabbitmq.py
docs/: components.md  conf.py  core_concepts.md  getting_started.md  gui-and-persistence.md  index.md  security-checklist.md
docs/api/: backends.rst  cli.rst  config.rst  core.rst  index.md  typing.rst
examples/: advanced_branching.py  error_handling.py  nested_pipeline.py  simple_pipeline.py
examples/01_basics/: 01_simple_pipeline.py  02_context_and_metrics.py  03_source_stages.py
examples/02_backends/: 01_threading_backend.py  02_asyncio_backend.py  03_processing_backend.py
examples/03_components/: 01_branching.py  02_aggregators.py  03_rabbitmq.py
examples/04_advanced/: 01_nested_pipelines.py  02_worker_initialization.py  03_error_handling.py  04_processing_with_context.py  05_logging_and_checkpointing.py  06_dead_letter_queue.py  07_configuration.py  08_visualization.py
examples/config/: default.yml
lijnding/: __init__.py  cli.py
lijnding/backends/: __init__.py  asyncio.py  base.py  function_registry.py  processing.py  registry.py  runner_registry.py  serial.py  threading.py
lijnding/components/: __init__.py  batch.py  branch.py  filter.py  http.py  io.py  rabbitmq.py  reduce.py
lijnding/core/: __init__.py  context.py  errors.py  hooks.py  log.py  pipeline.py  stage.py  utils.py
lijnding/typing/: __init__.py  checker.py  inference.py
src/lijnding/: __init__.py  cli.py  config.py
src/lijnding/backends/: __init__.py  asyncio.py  base.py  processing.py  runner_registry.py  serial.py  threading.py
src/lijnding/components/: __init__.py  batch.py  branch.py  do_while.py  filter.py  for_each.py  if_else.py  io.py  map.py  reduce.py  retry.py  split.py  while_loop.py
src/lijnding/core/: __init__.py  context.py  errors.py  hooks.py  log.py  pipeline.py  stage.py  utils.py
src/lijnding/orchestration/: context.py  models.py
src/lijnding/typing/: adapters.py  checker.py  inference.py
tests/: test_backends.py  test_components.py  test_core.py  test_error_handling.py
tests/backends/: test_asyncio.py  test_processing.py  test_serial.py  test_threading.py
tests/helpers/: test_runner.py
tests/integration/: test_cli.py  test_composition.py  test_examples.py  test_mixed_backends.py  test_mixed_backends_with_context.py  test_mixed_nested_backends.py  test_source_stages.py  test_streaming_bridge.py
tests/integration/01_basic_pipelines/: test_empty_input.py  test_identity.py  test_multi_stage.py
tests/integration/02_context/: test_counter_atomicity.py  test_data_propagation.py
tests/integration/03_branching/: test_complex_branching.py  test_fan_out_concat.py
tests/integration/04_nesting/: test_nested_pipelines.py
tests/integration/05_error_handling/: test_advanced_error_policies.py  test_error_propagation.py  test_error_routing.py
tests/integration/06_source_stages/: test_source_stage.py
tests/integration/07_aggregators/: test_basic_aggregator.py  test_mixed_itemwise_aggregator.py
tests/integration/08_backpressure/: test_backpressure.py  test_backpressure_and_buffer.py  test_buffer_size.py
tests/integration/09_components/: test_do_while.py  test_filter.py  test_for_each.py  test_http.py  test_if_else.py  test_io.py  test_rabbitmq.py  test_retry.py  test_unbatch_with_split.py  test_while_loop.py
tests/integration/10_context/: test_context_logger.py
tests/integration/11_hooks/: test_worker_hooks.py
tests/integration/12_configuration/: test_config_in_pipeline.py
tests/integration/13_orchestration/: test_orchestration.py
tests/scenarios/: test_composition.py  test_e2e_scenarios.py  test_mixed_backends.py  test_source_stages.py
tests/scenarios/01_basic_pipelines/: test_empty_input.py  test_identity.py  test_multi_stage.py
tests/scenarios/02_context/: test_counter_atomicity.py  test_data_propagation.py
tests/scenarios/03_branching/: test_fan_out_concat.py
tests/scenarios/04_nesting/: test_nested_pipelines.py
tests/scenarios/05_error_handling/: test_error_propagation.py
tests/scenarios/06_source_stages/: test_source_stage.py
tests/scenarios/07_aggregators/: test_basic_aggregator.py  test_mixed_itemwise_aggregator.py
tests/unit/: test_config.py  test_core_api.py  test_error_handling.py  test_type_checking.py
tests/unit/components/: test_aggregators.py  test_branch.py
tests/utils/: test_runner.py
ui/: MANIFEST.in  README.md  pyproject.toml  setup.py
ui/fastapi/: README.md  pyproject.toml
ui/src/lijnding_ui/: main.py  persistence.py
ui/src/lijnding_ui/static/: index.html
ui/src/lijnding_ui/static/_app/: version.json
ui/src/lijnding_ui/static/_app/immutable/chunks/: index.d0e9277d.js  singletons.8f801546.js  stores.58b759cb.js
ui/src/lijnding_ui/static/_app/immutable/entry/: app.64f29825.js  start.6fdcb47a.js
ui/src/lijnding_ui/static/_app/immutable/nodes/: 0.35167da5.js  1.9ade86c4.js  2.5dfd12be.js  3.57208377.js
ui/svelte/: .gitignore  package-lock.json  package.json  svelte.config.js
ui/svelte/src/routes/run/[run_id]/: +page.svelte
