[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lijnding"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A Composable Pipeline Framework for Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dill", # For robust serialization in the processing backend
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/example/lijnding"
"Bug Tracker" = "https://github.com/example/lijnding/issues"

[project.optional-dependencies]
http = ["aiohttp>=3.8.0"]
test = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-aiohttp", # For testing the http component
]

[tool.pytest.ini_options]
pythonpath = "."
