[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lijnding"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A Composable Pipeline Framework for Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dill", # For robust serialization in the processing backend
    "structlog",
    "PyYAML>=6.0",
    "typeguard",
    "click>=8.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
"Homepage" = "https://github.com/example/lijnding"
"Bug Tracker" = "https://github.com/example/lijnding/issues"

[project.optional-dependencies]
http = ["aiohttp>=3.8.0"]
rabbitmq = ["pika>=1.3.0"]
gui = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart", # For form data
    "aiofiles", # For async file operations
]
test = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-aiohttp", # For testing the http component
    "pika>=1.3.0",
]
all = ["lijnding[http]", "lijnding[rabbitmq]", "lijnding[gui]"]

[tool.pytest.ini_options]
pythonpath = "."

[project.scripts]
lijnding = "lijnding.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
