[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lijnding-core"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A Composable Pipeline Framework for Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dill", # For robust serialization in the processing backend
    "structlog",
    "PyYAML>=6.0",
    "typeguard",
    "click>=8.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/example/lijnding"
"Bug Tracker" = "https://github.com/example/lijnding/issues"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio",
    "sphinx",
    "furo",
    "myst-parser",
]
test-all = [
    "lijnding-core[test]",
    "lijnding-http[test]",
    "lijnding-rabbitmq[test]",
]

[tool.pytest.ini_options]

[project.scripts]
lijnding = "lijnding.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
