[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lijnding-ui"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "Web-based GUI for the LijnDing Pipeline Framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lijnding-core",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "aiofiles",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
