[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lijnding-http"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "HTTP components for the LijnDing Pipeline Framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lijnding-core",
    "aiohttp>=3.8.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lijnding*"]
namespaces = true
