[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lijnding-fastapi"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "The FastAPI backend for the LijnDing Pipeline Framework GUI."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart", # For form data
    "aiofiles", # For async file operations
]

[project.urls]
"Homepage" = "https://github.com/example/lijnding"
"Bug Tracker" = "https://github.com/example/lijnding/issues"
